syntax = "proto3";
import "google/protobuf/timestamp.proto";

package blog;

option java_package = "com.demo.blog";

option java_multiple_files = true;

message Blog {
  string id        = 1;
  string author_id = 2;
  string title     = 3;
  string content   = 4;
  string createdAt = 5;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

service BlogService{
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse){};
}